SubscriptionSidebar: own option section, various changes - move all subscription related settings to a new section - rename all subscription related settings to reflect the new category - shorten all subscription related translations as the section suffices to say that it relates to the subscriptions - fix width creep of the subscription sidebar (fix max-width) - add new setting for showing magazine icons in the subscription sidebar (default is on and on mobile it the icons are always shown) - bring back the settings formerly remove. They are needed on mobile - add a new translation key for the header of the subscription panel (make it a lot shorter so the icons won't move to a new line) - move the subscription panel above other panels if it is inline - replace the active border with an active background color (might be too subtle)

--- a/assets/styles/components/_sidebar-subscriptions.scss
+++ b/assets/styles/components/_sidebar-subscriptions.scss
@@ -96,6 +96,11 @@
         object-fit: scale-down;
         border-radius: 50%;
         vertical-align: middle;
+        &.onlyMobile {
+          @include media-breakpoint-up(lg) {
+            display: none;
+          }
+        }
       }
 
       .magazine-subscription-avatar-placeholder{
@@ -103,12 +108,17 @@
         @include media-breakpoint-down(lg) {
           display: none;
         }
+        &.onlyMobile {
+          @include media-breakpoint-up(lg) {
+            display: none;
+          }
+        }
       }
 
       &.active {
-        border: var(--kbin-header-border);
-
+        background-color: var(--kbin-bg);
       }
+
       a {
         display: inline-block;
         overflow: hidden;
@@ -121,6 +131,11 @@
 
           &.has-image {
             margin-left: .25rem;
+            &.onlyMobile {
+              @include media-breakpoint-up(lg) {
+                margin-left: 0;
+              }
+            }
             @include media-breakpoint-down(lg) {
               display: none;
             }
